# hdd-liberator

./: .bazelrc  .gitignore  .prettierrc.json  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  gosrc.py  js13k.json  package-lock.json  package.json
bazel/: zopfli.bazel
demo/: index.html  main.js
devserver/: .gitignore  BUILD.bazel  build_error.gohtml  main.go  script.go  source.go  status.gohtml  template.go
devserver/compiler/: BUILD.bazel  compiler.go
devserver/project/: BUILD.bazel  project.go
devserver/static/: style.css
game/: audio.data.js  audio.game.js  audio.js  audio.music.js  audio.synth.js  common.js  dummy.test.js  entity.box.js  entity.device.js  entity.download.js  entity.generic.js  externs.compo.js  externs.js  game.js  grid.js  icons.js  index.compo.html  index.css  index.gohtml  input.js  level.data.js  level.js  main.compo.js  main.js  main.standard.js  mover.js  mover.test.js  player.js  random.js  render.js  render2d.js  render3d.js  songs.js  time.js  ui.game.js  ui.standard.js  util.js  websocket.js
html/: BUILD.bazel  html.go  html_test.go
java/: BUILD.bazel
java/us/moria/js13k/: CompilerDaemon.java  ProtoErrorManager.java
music/: 01_Creation.txt  01_Creation_Intro.txt  02_Dark.txt  02_Dark_Intro.txt  After Dark.opus  The Light of Creation.opus  code.py  songs.json
proto/: gen.py
proto/compiler/: BUILD.bazel  compiler.proto
scripts/: entities.py  icons.py  minify.js  test.transform.js
static/: style.css
