load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_java//java:defs.bzl", "java_import")

java_import(
    name = "closure",
    jars = [
        "node_modules/google-closure-compiler-java/compiler.jar",
    ],
    visibility = ["//visibility:public"],
)

# gazelle:prefix moria.us/js13k
gazelle(name = "gazelle")
