load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "devserver",
    srcs = [
        "main.go",
        "script.go",
    ],
    data = [
        "//java:compiler",
    ],
    deps = [
        "//proto/compiler:compiler_go_proto",
        "//devserver/compiler",
        "//html",
        "@com_github_go_chi_chi_v5//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_spf13_pflag//:go_default_library",
    ],
)
