load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "compiler",
    srcs = ["compiler.go"],
    importpath = "moria.us/js13k/devserver/compiler",
    visibility = ["//devserver:__subpackages__"],
    deps = [
        "//proto/compiler:compiler_go_proto",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
    ],
)
