load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "project",
    srcs = ["project.go"],
    importpath = "moria.us/js13k/devserver/project",
    visibility = ["//devserver:__subpackages__"],
    deps = [
        "//devserver/compiler",
        "//html",
        "//proto/compiler:compiler_go_proto",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)
