load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_java//java:defs.bzl", "java_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "compiler_proto",
    srcs = ["compiler.proto"],
)

go_proto_library(
    name = "compiler_go_proto",
    importpath = "moria.us/js13k/proto/compiler",
    protos = [":compiler_proto"],
)

java_proto_library(
    name = "compiler_java_proto",
    deps = [":compiler_proto"],
)
